Ejercicios/Lightning Lab - 1/Ejercicio 2/01-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
spec:
  podSelector:
    matchLabels:
      run: secure-pod
  policyTypes:
    - Ingress
  ingress: # Esta sección SOLO tendrá efecto si el policyTypes está definido para este uso
    - from:
      - podSelector: #En este caso, al haber 2 selectores, significa que solo permitimos tráfico si se cumplen las 2 condiciones
          matchLabels:
            name: webapp-color # Label sobre el que vamos a aplicar la política
      ports:
          - protocol: TCP
            port: 80
